css/parser/tests/errors/selector/pseudo-element/after/output.stderr
error: Invalid selector
 --> $DIR/tests/errors/selector/pseudo-element/after/input.css:1:3
  |
1 | :: foo {
  |   ^

